# ReKernel-X

./: README.md  README_CN.md  update.json  update.md
.github/workflows/: build-aar.yml  build-lkm.yml  ddk-lkm.yml  release.yml
Develop/: README.md  build.gradle  settings.gradle
Develop/aar/: .gitignore  README.md  settings.gradle
Develop/aar/rekernel/: consumer-rules.pro
Develop/aar/rekernel/src/main/cpp/: CMakeLists.txt  rekernel_jni.cpp
Develop/aar/rekernel_x/: build.gradle  consumer-rules.pro
Develop/aar/rekernel_x/src/main/cpp/: CMakeLists.txt  rekernel_jni.cpp
Develop/rekernel_x/src/main/cpp/: CMakeLists.txt  rkx_jni.cpp  rkx_log.h  rkx_nla.h  rkx_uapi.h
Develop/rekernel_x/src/main/java/cn/myflv/kernel/: ReKernelX.java  ReKernelXCallback.java
LKM-Source/: Kconfig  Makefile  README.md  rekernel.h  rekernel_binder.c  rekernel_binder_kp.c  rekernel_frozen.c  rekernel_genl.c  rekernel_main.c  rekernel_netfilter.c  rekernel_netlink.c  rekernel_netuid.c  rekernel_signal.c  rekernel_x.h  rekernel_x_binder.c  rekernel_x_binder_kp.c  rekernel_x_frozen.c  rekernel_x_genl.c  rekernel_x_log.h  rekernel_x_main.c  rekernel_x_netfilter.c  rekernel_x_netuid.c  rekernel_x_signal.c  rekernelx_binder.c  rekernelx_binder_kp.c  rekernelx_frozen.c  rekernelx_genl.c  rekernelx_main.c  rekernelx_netfilter.c  rekernelx_netuid.c  rekernelx_signal.c  rkx.c  rkx.h  rkx_binder.c  rkx_binder_alloc.c  rkx_binder_alloc.h  rkx_binder_kp.c  rkx_frozen.c  rkx_genl.c  rkx_log.h  (+3 more)
template/: customize.sh  module.prop  post-fs-data.sh
(+4 files in other folders)
